# wasm-pack-test-all

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  lychee.toml
.github/workflows/: ci.yml
src/: cli.rs  main.rs  tests.rs
